maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:27: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    etat match {
    ^IslandMaze:37: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    return etat
    ^